<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.baosystems.cstocklauncher.MainActivity"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">

    <ImageView
        android:id="@+id/imageCStockLogo"
        android:layout_width="0dp"
        android:layout_height="88dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/cstock_logo"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp" />

    <Button
        android:id="@+id/buttonSo"
        android:layout_width="290dp"
        android:layout_height="80dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@android:color/holo_blue_light"
        android:elevation="0dp"
        android:onClick="openDataCollection"
        android:text="@string/app_datacapture"
        app:layout_constraintLeft_toLeftOf="@+id/imageCStockLogo"
        app:layout_constraintRight_toRightOf="@+id/imageCStockLogo"
        app:layout_constraintTop_toBottomOf="@+id/imageCStockLogo" />

    <Button
        android:id="@+id/buttonSoh"
        android:layout_width="290dp"
        android:layout_height="80dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@android:color/holo_blue_light"
        android:onClick="openTracker"
        android:text="@string/app_trackercapture"
        app:layout_constraintLeft_toLeftOf="@+id/imageCStockLogo"
        app:layout_constraintRight_toRightOf="@+id/imageCStockLogo"
        app:layout_constraintTop_toBottomOf="@+id/buttonSo" />

    <ImageView
        android:id="@+id/imageUiOLogo"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:contentDescription="@string/logo_uio"
        android:src="@drawable/uio_seal"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="0dp"
        android:layout_marginRight="0dp"
        app:layout_constraintRight_toRightOf="parent" />

    <ImageView
        android:id="@+id/imageJSILogo"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginBottom="0dp"
        android:contentDescription="@string/logo_jsi"
        android:src="@drawable/jsi_logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/imageMoHLogo"
        android:layout_marginLeft="8dp"
        app:layout_constraintRight_toLeftOf="@+id/imageUiOLogo"
        android:layout_marginRight="8dp" />

    <ImageView
        android:id="@+id/imageMoHLogo"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:contentDescription="@string/logo_moh"
        android:src="@drawable/moh_seal"
        android:layout_marginEnd="80dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="290dp"
        android:layout_height="80dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@android:color/holo_blue_light"
        android:onClick="openDashboard"
        android:text="@string/app_dashboard"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonSoh" />


</android.support.constraint.ConstraintLayout>
